# mlir-noob

./: .clangd  .gitignore  a.txt
mlir-toy/: CMakeLists.txt  main.cpp
mlir-toy/dialect/: CMakeLists.txt
mlir-toy/dialect/include/toy/: ToyOps.td
mlir-toy/ex1-io/: ex1-io.cpp
mlir-toy/north_star_attribute/: CMakeLists.txt  main.cpp
mlir-toy/north_star_attribute/include/Dialect/NorthStar/: CMakeLists.txt  NorthStarAttrs.td  NorthStarDialect.td  NorthStarTypes.h  NorthStarTypes.td
mlir-toy/north_star_attribute/src/Dialect/NorthStar/: CMakeLists.txt  NorthStarAttrs.cpp  NorthStarDialect.cpp
mlir-toy/north_star_dialect/: CMakeLists.txt  main.cpp
mlir-toy/north_star_dialect/include/Dialect/NorthStar/: CMakeLists.txt  NorthStarDialect.td
mlir-toy/north_star_dialect/src/Dialect/NorthStar/: CMakeLists.txt  NorthStarDialect.cpp
mlir-toy/north_star_interface/: CMakeLists.txt  main.cpp
mlir-toy/north_star_interface/include/Dialect/NorthStar/: CMakeLists.txt  NorthStarAttrs.h  NorthStarAttrs.td  NorthStarConstraints.td  NorthStarDialect.td  NorthStarEnums.td  NorthStarOps.h  NorthStarOps.td  NorthStarTypes.td
mlir-toy/north_star_interface/include/Interfaces/: CMakeLists.txt  DistributeParallelismInterfaces.h  DistributeParallelismInterfaces.td
mlir-toy/north_star_interface/src/Dialect/NorthStar/: CMakeLists.txt  NorthStarDialect.cpp  NorthStarOps.cpp
mlir-toy/north_star_interface/src/Interfaces/: CMakeLists.txt  DistributeParallelismInterfaces.cpp
mlir-toy/north_star_operation/: CMakeLists.txt  main.cpp
mlir-toy/north_star_operation/include/Dialect/NorthStar/: CMakeLists.txt  NorthStarAttrs.h  NorthStarEnums.h  NorthStarTypes.td
mlir-toy/north_star_operation/src/Dialect/NorthStar/: CMakeLists.txt  NorthStarOps.cpp  NorthStarTypes.cpp
mlir-toy/north_star_pass/: CMakeLists.txt  main.cpp
mlir-toy/north_star_pass/include/Dialect/NorthStar/IR/: CMakeLists.txt  NorthStarAttrs.h  NorthStarAttrs.td  NorthStarConstraints.td  NorthStarDialect.h  NorthStarEnums.h  NorthStarEnums.td  NorthStarOps.h  NorthStarOps.td  NorthStarTypes.h  NorthStarTypes.td
mlir-toy/north_star_pass/include/Dialect/NorthStar/Transforms/: CMakeLists.txt  Passes.h  Passes.td
mlir-toy/north_star_pass/include/Interfaces/: CMakeLists.txt  DistributeParallelismInterfaces.h  DistributeParallelismInterfaces.td
mlir-toy/north_star_pass/include/Utils/: File.h  Key.h
mlir-toy/north_star_pass/src/Dialect/NorthStar/IR/: CMakeLists.txt  NorthStarAttrs.cpp  NorthStarDialect.cpp  NorthStarOps.cpp  NorthStarTypes.cpp
mlir-toy/north_star_pass/src/Dialect/NorthStar/Transforms/: ApplyDistributeTransform.cpp  CMakeLists.txt  MarkDistributeParallelParameters.cpp
mlir-toy/north_star_pass/src/Interfaces/: CMakeLists.txt  DistributeParallelismInterfaces.cpp
mlir-toy/north_star_pass/src/Utils/: File.cpp
mlir-toy/north_star_type/: CMakeLists.txt  main.cpp
mlir-toy/north_star_type/include/Dialect/NorthStar/: CMakeLists.txt  NorthStarDialect.h  NorthStarDialect.td
mlir-toy/north_star_type/src/Dialect/NorthStar/: CMakeLists.txt  NorthStarDialect.cpp  NorthStarTypes.cpp
mlit-toy/: CMakeLists.txt
mlit-toy/beautiful_dialect/: CMakeLists.txt
mlit-toy/dialect/include/toy/: Toy.td  ToyDialect.h  ToyDialect.td  ToyOps.td
mlit-toy/dialect/lib/: toy.cpp
mlit-toy/dialect/tools/toy-opt/: CMakeLists.txt
